# pytorch-katas

./: README.md  pyproject.toml
notebooks/: ResNet.ipynb
notebooks/resnet/: ResNet.ipynb
src/pytorch_katas/: __init__.py  settings.py
