[project]
name = "pytorch-katas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Neumann", email = "felix.maximilian.neumann@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[project.scripts]
pytorch-katas = "pytorch_katas:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
