[project]
name = "pytorch-katas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Neumann", email = "felix.maximilian.neumann@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[project.scripts]
pytorch-katas = "pytorch_katas:main"

[tool.ruff]
line-length = 120

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
